# ChangeLog for media-video/sundtek-tv
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*sundtek-tv-150411.190910 (15 Apr 2015)

  15 Apr 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-150310.134458 (10 Mar 2015)

  10 Mar 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-150219.053827 (20 Feb 2015)

  20 Feb 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-150125.105350 (26 Jan 2015)

  26 Jan 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-150111.155129 (16 Jan 2015)

  16 Jan 2015; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Fix QA message

*sundtek-tv-141222.213801 (25 Dec 2014)

  27 Dec 2014; Martin Väth <martin@mvath.de>:
  Add blocker to <openrc-0.13

  25 Dec 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-141209.042745 (12 Dec 2014)

  12 Dec 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-141111.122431 (11 Nov 2014)

  11 Nov 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-141016.181612 (19 Oct 2014)

  19 Oct 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140918.104249 (20 Sep 2014)

  20 Sep 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140727.221230 (29 Jul 2014)

  29 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140715.054711 (16 Jul 2014)

  16 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140711.143644 (13 Jul 2014)

  13 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140701.143639 (07 Jul 2014)

  07 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*sundtek-tv-140629.115654 (29 Jun 2014)
