@@ -1,1 +1,1 @@
-DIST sundtek_installer_150411.190910.sh 26917847 SHA256 d6375f3cc3d24ba2beeadddbae37c6e5e41848739850c9ae48bbf3e22034890c SHA512 efa07e58c95d6378376848fbaff57f1d441af82906b8c90a3c506241ee6fa49b1eb85cf33949571418f5703af0ae2d338951b5e5d13eb21b4cc6cd052e311715 WHIRLPOOL ef4751abab0ce16993104ab4a55d50caeffcaac62a779d281e47b74ba69c4462b560fc953cab33507b605b24fcf5c56b2c0e24051b41358c7d96f6a1ee332032
+DIST sundtek_installer_150606.044721.sh 26989907 SHA256 f9028af584170dd68cb17f1cfefbea8701d3b357570406f24a7ddffb97a43a99 SHA512 a4b658ff0e42b7d7a8c734f5811e5eda82e79f0fe477f1a298cd59f9679fe3b327fe5e826aeea8c7b6ce33231f172637d4715985a22309d764b982c2da81648c WHIRLPOOL c3fe90a6d56c9ef02d9b6c70ae72701cb1d4dc9eed36fcc2b91ead8fe012ec0980930dac5bf7a139eb4d599227a702dbcf6f8d13859bfeae83f035321791d656
