@@ -15,5 +15,7 @@
 	</upstream>
 	<use>
 		<flag name="pax_kernel">Mark package which is necessary if you use a PAX kernel</flag>
+		<flag name="ld-preload-file">Install /etc/ld.so.preload</flag>
+		<flag name="ld-preload-env">Install LD_PRELOAD in /etc/env.d/50sundtek-tv</flag>
 	</use>
 </pkgmetadata>
