@@ -1,1 +1,1 @@
-DIST squashmount-v11.0.1.tar.gz 59208 SHA256 6861dc70791a7e1a803ce7404465423b3ed748f807db8d7589e9abef77bc42bd SHA512 8248a121638f086ddd3cfd2bdc42ca91153e434582bf81a51fc2aa4d335a41f4eabc65c4da5e5a28ec6ae78e843bc72eedbf8166353705cdb5fb22dda9e90817 WHIRLPOOL 906524e09ec2d2ae84c13c45ef5756763c316885360c71e8688d8ba66ce5ac6e91a2954711495ffa52edea51552180164295d2ed235c82d6d99ba84aee8b7651
+DIST squashmount-v12.0.0.tar.gz 60244 SHA256 1f5aeb8455e16888b5c136e97200f4fe2e5f679e666c8f53429a5f3dc0e07c4d SHA512 16f020bcca0fec18103cf7e9cde21a71b913973b7f69fe83dc9e9efa726d0aabb296b92b5e22ebccf9a5899d68930c03f50423a82370080087c0cd1670934a3a WHIRLPOOL 709927cf895778a44285a295caa790c518a8964640998d5ca72c222d4e518d3633229a87132cf19f01ea78cb5cfe12a29ed1e2fa2172ce00152bb070ba63e118
