@@ -1,1 +1,1 @@
-DIST noscript-2.6.9.24.xpi 546549 SHA256 7f95fe893dfaca26ea35dde3b64cfc33e543dcc39f7d2e710c2998e7cb374610 SHA512 4d185e30af456f9fcaf289e684c7a400eb8a07458fbf0b22c787429653a1713159c48999f1b322ec9374c2f9fc69b6822fba154ddcf778b6b2f925b018b93fbb WHIRLPOOL 74d8899e8352d71d2b37adbdd0fae5365cecdef548a4a914b9bfd3702456747f8108260bd48f3a7a986c08d397672f57a88c182205b635e459644ff24706a574
+DIST noscript-2.6.9.26.xpi 548855 SHA256 b549aa3f71935249098b99c9bdb379e049d9daf876bbd887bd096f54d36c8c3d SHA512 3db1ecb4c04a291539e65823ce2031d7115b71c52ba0051a97771b0ac8378eccfe1b6179b2543301c27a36b4e53d82bb3ff8b9b433d427b8a81e5a455bbcff69 WHIRLPOOL 76fe46aadb9765703c1fbefa9cd5c50b6cc4151dfa58d2930e6e4d3a023585db66febe6bf532cd5d21fa07495ccfaeba34106c7c5b868d2a7de9cf6608f31ed7
