@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashmount-12.0.0 (07 Jun 2015)
+
+  07 Jun 2015; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *squashmount-11.0.1 (24 May 2015)
 
   24 May 2015; Martin Väth <martin@mvath.de>:
