@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.6.9.26 (07 Jun 2015)
+
+  07 Jun 2015; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *noscript-2.6.9.24 (24 May 2015)
 
   24 May 2015; Martin Väth <martin@mvath.de>:
