@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sundtek-tv-150411.190910 (07 Jun 2015)
+
+  07 Jun 2015; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Make /etc/ld.so.preload optional:
+  Introduce USE=ld-preload-file and USE=ld-preload-env and output usage details
+
 *sundtek-tv-150411.190910 (15 Apr 2015)
 
   15 Apr 2015; Martin Väth <martin@mvath.de>:
